--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
         "babel-loader": "^8.0.4",
         "babel-plugin-module-resolver": "^3.1.1",
         "babel-preset-es2015": "^6.24.1",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-promise": "^6.0.0",
         "jest": "^26.3.0"
     },
     "scripts": {
         "test": "jest",
-        "start": "node app"
+        "start": "node app",
+        "eslint:fix": "eslint --fix ./*.js"
     },
     "type": "module",
     "babel": {
@@ -57,6 +62,7 @@
         ]
     },
     "dependencies": {
+        "eslint": "^8.0.1",
         "lodash": "^4.17.20",
         "neat-csv": "^5.2.0"
     }
