--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true
     },
     "extends": "standard",
     "overrides": [
@@ -11,5 +12,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-unused-vars": ["warn"],
+        "semi": ["error", "always"]
     }
 }
